...
      values.join(' ').toLowerCase().contains(normalizedTerm);
  return [
    if (matches([l10n.automaticBackup, l10n.automaticBackupNotificationBody]) &&
        !kIsWeb &&
        Platform.isAndroid)
      ListTile(
        key: const Key('automaticBackupTile'),
        title: Text(
          l10n.automaticBackup,
          textAlign: isDesktopLayout(context)
              ? TextAlign.start
              : TextAlign.center,
        ),
        leading: settings.automaticBackups
            ? const Icon(Icons.timer)
            : const Icon(Icons.timer_outlined),
        onTap: () => tapBackup(!settings.automaticBackups, l10n),
        trailing: Switch(
          key: const Key('automaticBackupSwitch'),
          value: settings.automaticBackups,
          onChanged: (value) => tapBackup(value, l10n),
        ),
      ),
    if (matches([l10n.appPermissions, l10n.appPermissionsDescription]) &&
        !kIsWeb &&
...
